--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">JobDongSani_Android</string>
     <string name="login">Login</string>
+    <string name="join">Join</string>
 </resources>
