--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">JobDongSani_Android</string>
     <string name="login">Login</string>
     <string name="join">Join</string>
+    <string name="profile">프로필</string>
+    <string name="search">검색</string>
+    <string name="home">홈</string>
 </resources>
